[gd_scene load_steps=2 format=3 uid="uid://d7k2c8dx1tbs"]

[ext_resource type="Script" path="res://Scripts/bank.gd" id="1_tdspc"]

[node name="bank" type="ColorRect"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tdspc")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -331.0
offset_top = -184.0
offset_right = 1313.0
offset_bottom = 817.0
color = Color(0.00392157, 0.00392157, 0.00392157, 0.682353)

[node name="gold" type="Label" parent="ColorRect"]
unique_name_in_owner = true
z_index = 30
y_sort_enabled = true
layout_mode = 0
offset_left = 824.0
offset_top = 455.0
offset_right = 864.0
offset_bottom = 478.0

[node name="Label" type="Label" parent="ColorRect/gold"]
layout_mode = 0
offset_top = -24.0
offset_right = 40.0
offset_bottom = -1.0
text = "Gold"

[node name="startScreen" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 860.0
offset_top = 398.0
offset_right = 971.0
offset_bottom = 421.0
text = "BANK OF SAFE"

[node name="Button2" type="Button" parent="ColorRect/startScreen"]
modulate = Color(0, 0.517647, 0.360784, 1)
light_mask = 3
visibility_layer = 3
z_index = 30
y_sort_enabled = true
layout_mode = 0
offset_left = 102.0
offset_top = 91.0
offset_right = 208.0
offset_bottom = 130.0
text = "Give Money"

[node name="Button" type="Button" parent="ColorRect/startScreen"]
modulate = Color(0.72549, 0, 0.247059, 1)
top_level = true
light_mask = 3
visibility_layer = 5
z_index = 30
y_sort_enabled = true
layout_mode = 0
offset_left = 451.0
offset_top = 303.0
offset_right = 541.0
offset_bottom = 343.0
theme_override_colors/font_pressed_color = Color(0, 0.803922, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.439216, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0.858824, 0, 1)
text = "With Draw"

[node name="withdraw" type="Label" parent="ColorRect"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 879.0
offset_top = 401.0
offset_right = 1055.0
offset_bottom = 460.0
text = "WITHDRAW"

[node name="1g" type="Button" parent="ColorRect/withdraw"]
layout_mode = 0
offset_left = -102.0
offset_top = 125.0
offset_right = -40.0
offset_bottom = 169.0
text = "1 gold"

[node name="fiveG" type="Button" parent="ColorRect/withdraw/1g"]
layout_mode = 0
offset_left = 117.0
offset_top = 1.0
offset_right = 181.0
offset_bottom = 45.0
text = "10 gold"

[node name="fiftyG" type="Button" parent="ColorRect/withdraw/1g/fiveG"]
layout_mode = 0
offset_left = 127.0
offset_top = 3.0
offset_right = 191.0
offset_bottom = 47.0
text = "50 gold"

[node name="all" type="Button" parent="ColorRect/withdraw/1g/fiveG/fiftyG"]
layout_mode = 0
offset_left = -140.0
offset_top = 66.0
offset_right = -58.0
offset_bottom = 109.0
text = "all gold"

[node name="input" type="Label" parent="ColorRect"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 891.0
offset_top = 415.0
offset_right = 974.0
offset_bottom = 438.0
text = "ADD GOLD"

[node name="1gIn" type="Button" parent="ColorRect/input"]
layout_mode = 0
offset_left = -102.0
offset_top = 125.0
offset_right = -40.0
offset_bottom = 169.0
text = "1 gold"

[node name="fiveGIn" type="Button" parent="ColorRect/input/1gIn"]
layout_mode = 0
offset_left = 117.0
offset_top = 1.0
offset_right = 181.0
offset_bottom = 45.0
text = "10 gold"

[node name="fiftyIn" type="Button" parent="ColorRect/input/1gIn/fiveGIn"]
layout_mode = 0
offset_left = 127.0
offset_top = 3.0
offset_right = 191.0
offset_bottom = 47.0
text = "50 gold"

[node name="allIn" type="Button" parent="ColorRect/input/1gIn/fiveGIn/fiftyIn"]
layout_mode = 0
offset_left = -140.0
offset_top = 66.0
offset_right = -58.0
offset_bottom = 109.0
text = "all gold"

[node name="bankGold" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 980.0
offset_top = 454.0
offset_right = 1020.0
offset_bottom = 477.0

[node name="Label" type="Label" parent="ColorRect/bankGold"]
layout_mode = 0
offset_left = -25.0
offset_top = -25.0
offset_right = 68.0
offset_bottom = -2.0
text = "BANK GOLD"

[node name="Exit" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 744.0
offset_top = 371.0
offset_right = 781.0
offset_bottom = 402.0
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(590, 320)
zoom = Vector2(3.5, 3.5)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="ColorRect/startScreen/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/startScreen/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/withdraw/1g" to="." method="_on_g_pressed"]
[connection signal="pressed" from="ColorRect/withdraw/1g/fiveG" to="." method="_on_five_g_pressed"]
[connection signal="pressed" from="ColorRect/withdraw/1g/fiveG/fiftyG" to="." method="_on_fifty_g_pressed"]
[connection signal="pressed" from="ColorRect/withdraw/1g/fiveG/fiftyG/all" to="." method="_on_all_pressed"]
[connection signal="pressed" from="ColorRect/input/1gIn" to="." method="_on_g_in_pressed"]
[connection signal="pressed" from="ColorRect/input/1gIn/fiveGIn" to="." method="_on_five_g_in_pressed"]
[connection signal="pressed" from="ColorRect/input/1gIn/fiveGIn/fiftyIn" to="." method="_on_fifty_in_pressed"]
[connection signal="pressed" from="ColorRect/input/1gIn/fiveGIn/fiftyIn/allIn" to="." method="_on_all_in_pressed"]
[connection signal="pressed" from="ColorRect/Exit" to="." method="_on_exit_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
